Rama temporal
